Tue Feb  7 14:29:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_foreach): should not yield same pair when checking
	  after unpacking.

Mon Feb  6 21:55:13 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: abort if the working directory is dirty.

	* tool/merger.rb: update the working directory after commit.

Mon Feb  6 00:16:27 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_compatible): return ASCII-8BIT even if 2nd string
	  is ascii only string. [ruby-core:42354] [Bug #5968]

Fri Feb  3 07:16:47 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick.rb:  Moved proxy rewriting to WEBrick::HTTPProxy.
	* lib/webrick/httpproxy.rb:  Add examples of creating a proxy server
	  and response rewriting using HTTPProxy.

Fri Feb  3 06:53:22 2012  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_x509store.c:  Add class documentation for
	  OpenSSL::X509::Store

Thu Feb  2 22:28:13 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/net/http/test_https_proxy.rb
	  (HTTPSProxyTest#test_https_proxy_authentication):
	  add workaround to avoid to hang up without openssl.
	  see [ruby-dev:45021][Bug #5786]

	* test/resolv/test_dns.rb (TestResolvDNS#test_query_ipv4_address):
	  ditto.

Thu Feb  2 21:48:18 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb: use meaningful names.

Thu Feb  2 21:38:52 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb, test/rexml/test_namespace.rb:
	  fix the default xml namespace URI validation.
	  [ruby-dev:45169] [Bug #5956]
	  Reported by Miho Hiramatsu. Thanks!!!

Thu Feb  2 17:51:02 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (argf_next_argv): reset ARGF.next_p on ARGV.replace.
	  r34409 breaks replacing ARGV.
	  [ruby-dev:45160] [Bug #5952]

Thu Feb  2 16:21:01 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTPKeepAlive#*): remove debug
	  output.
